--- a/week_4/day_3/s3.md
+++ b/week_4/day_3/s3.md
@@ -1,1 +1,38 @@
 # S3
+
+In Global.
+
+1. launch ec2
+   1. use application security group rules.
+   2. connect to instance
+2. update
+3. upgrade
+4. install python
+   1. `sudo apt install python -y`
+5. install pip
+   1. `sudo apt install python-pip -y`
+6. install aws cli
+   1. `sudo pip install awscli`
+7. Type the following:
+   1. `aws configure`
+8. Open accessKeys. Copy and paste them in.
+   1. Access Key ID is shorter
+   2. Secret Access Key is longer.
+9. Default Region:
+   1.  `eu-west-1`
+10. Check connection:
+    1.  `aws s3 ls`
+    2.  should see a print out of buckets
+11. To create a bucket:
+    1. `aws s3 mb s3://<bucketnamehere> --region eu-west-1`
+    2. should return `make bucket: <bucketnamehere>`
+12. To move a file to the bucket:
+    1.  `aws s3 cp <file.name> s3://<bucketnamehere>`
+13. To download a file from the bucket:
+    1.  `aws s3 sync s3://<bucketname> <folder to download into>`
+14. To delete a file in a bucket:
+    1.  `aws s3 rm s3:///<bucketname>/example.txt`
+15. To delete everything in a bucket:
+    1.  `aws s3 rm s3:///<bucketname>/ --recursive`
+16. To delete a bucket:
+    1.  `aws s3 rb s3://<bucketname>`
