aws cli and scripts

--- a/week_4/day_3/s3.md
+++ b/week_4/day_3/s3.md
@@ -5,13 +5,13 @@ In Global.
 1. launch ec2
    1. use application security group rules.
    2. connect to instance
-2. update
-3. upgrade
-4. install python
+2. `sudo apt update`
+3. `sudo apt upgrade -y`
+4. Install python
    1. `sudo apt install python -y`
-5. install pip
+5. Install pip
    1. `sudo apt install python-pip -y`
-6. install aws cli
+6. Install aws cli
    1. `sudo pip install awscli`
 7. Type the following:
    1. `aws configure`
