--- a/week_4/day_3/s3.md
+++ b/week_4/day_3/s3.md
@@ -1,10 +1,9 @@
-# S3
+# S3 Buckets using AWS CLI
 
-In Global.
-
-1. launch ec2
-   1. use application security group rules.
-   2. connect to instance
+1. Launch EC2
+   1. Use the application level security group rules.
+      1. i.e., ports of 22, 443, 3000. 80.
+   2. Connect to instance
 2. `sudo apt update`
 3. `sudo apt upgrade -y`
 4. Install python
